# udp-dtls

./: Cargo.toml
examples/: udp_socket.rs
src/: dtls_acceptor.rs  dtls_acceptor_builder.rs  dtls_connector.rs  identity.rs  lib.rs  openssl.rs
test/: cert.der  cert.pem  identity.p12  root-ca.der  root-ca.pem
tests/: dtls_tests.rs
