[package]
name = "udp-dtls"
version = "0.1.1"
authors = ["Timon Post <https://github.com/TimonPost>", "Christopher _ <https://github.com/part1cleth1ef>"]
edition = "2024"
description = "DTLS abstraction ontop of UDP"
repository = "https://github.com/TimonPost/udp-dtls"
documentation = "https://docs.rs/udp-dtls/"
license = "MIT"
keywords = ["DTLS", "UDP", "connection", "openssl", "ssl"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"

[dependencies]
openssl = "0.10.75"
openssl-probe = "0.2.1"
log = "0.4.29"
bytes = "1.11.1"

[features]
vendored = ["openssl/vendored"]
